--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://blocklee.github.io/myFirstApp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "eth-sig-util": "^3.0.1",
+    "ethers": "^5.7.2",
+    "gh-pages": "^4.0.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
